// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pds like views > fetches post likes 1`] = `
{
  "cursor": "0000000000000__bafycid",
  "likes": [
    {
      "actor": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "did": "user(0)",
        "handle": "eve.test",
        "labels": [],
        "viewer": {
          "blockedBy": false,
          "muted": false,
        },
      },
      "createdAt": "1970-01-01T00:00:00.000Z",
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
    {
      "actor": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
          "chat": {
            "allowIncoming": "none",
          },
        },
        "did": "user(1)",
        "handle": "dan.test",
        "labels": [],
        "viewer": {
          "blockedBy": false,
          "following": "record(0)",
          "muted": false,
        },
      },
      "createdAt": "1970-01-01T00:00:00.000Z",
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
    {
      "actor": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "did": "user(2)",
        "handle": "carol.test",
        "labels": [],
        "viewer": {
          "blockedBy": false,
          "followedBy": "record(2)",
          "following": "record(1)",
          "muted": false,
        },
      },
      "createdAt": "1970-01-01T00:00:00.000Z",
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
    {
      "actor": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(4)/cids(0)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "hi im bob label_me",
        "did": "user(3)",
        "displayName": "bobby",
        "handle": "bob.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [],
        "viewer": {
          "blockedBy": false,
          "followedBy": "record(4)",
          "following": "record(3)",
          "muted": false,
        },
      },
      "createdAt": "1970-01-01T00:00:00.000Z",
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
  ],
  "uri": "record(5)",
}
`;

exports[`pds like views > fetches reply likes 1`] = `
{
  "cursor": "0000000000000__bafycid",
  "likes": [
    {
      "actor": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "did": "user(0)",
        "handle": "carol.test",
        "labels": [],
        "viewer": {
          "blockedBy": false,
          "followedBy": "record(1)",
          "following": "record(0)",
          "muted": false,
        },
      },
      "createdAt": "1970-01-01T00:00:00.000Z",
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
  ],
  "uri": "record(2)",
}
`;
